# Quick-Date-Pole-Bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
qdpb/: bot.py  client.py  formatting.py  main.py  processor.py
quick-date-poll-bot/: bot.py
