[tool.poetry]
name = "qdpb"
version = "0.1.0"
description = ""
authors = ["Tobias Dummschat <32331413+TobiasDummschat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
bot = "qdpb.bot:main"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.2"
emoji = "^2.9.0"
babel = "^2.13.1"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
